# medikafarm_sait

./: .pre-commit-config.yaml  README.md  pyproject.toml
main_sait/: manage.py
main_sait/home/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
main_sait/home/migrations/: 0001_initial.py  0002_alter_hometopinfo_options.py  0002_homedoctor.py  0003_alter_homedoctor_image.py  0004_alter_homebord_choice_alter_homebord_description_and_more.py  0004_homedocuments.py
main_sait/knigki/: admin.py  apps.py  models.py  urls.py  views.py
main_sait/knigki/migrations/: 0001_initial.py  0002_knigki_choice.py  0003_alter_knigki_description_alter_knigki_title.py
main_sait/main_sait/: asgi.py  settings.py  urls.py  wsgi.py
main_sait/media/: ВЫШЕСТОЯЩАЯ_И_КОНТРОЛИРУЮЩАЯ_ОРГАНИЗАЦИЯ.docx  Правила_обработки_персональных_данных.docx
main_sait/posts/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
main_sait/posts/migrations/: 0001_initial.py
main_sait/profi/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
main_sait/profi/migrations/: 0001_initial.py  0002_rename_predvaritelnie_uliza_predvaritelnie_and_more.py  0003_pereodik.py  0004_psixushka_alter_pereodik_options.py  0005_predsmena.py  0006_alter_predsmena_options.py  0007_remove_pereodik_title_remove_predvaritelnie_title_and_more.py  (+1 more)
main_sait/sale/: admin.py  apps.py  models.py  urls.py  views.py
main_sait/services/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
main_sait/spravki/: admin.py  apps.py  models.py  urls.py  views.py
main_sait/templates/: base.html
(+67 files in other folders)
